// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> component should render a toggle checked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  border-radius: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 2px;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.emotion-2+label {
  background: #DEDEDE;
  cursor: pointer;
}

.emotion-2:checked+label {
  background: #00677F;
}

.emotion-2:checked+label::after {
  -webkit-transform: translateX(24px);
  -moz-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
}

.emotion-2~span {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  cursor: pointer;
  color: #454545;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  position: relative;
  width: 48px;
  height: 24px;
  border-radius: 20px;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.emotion-4::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #FFFFFF;
  -webkit-transition: -webkit-transform 0.3s ease;
  transition: transform 0.3s ease;
  margin: 2px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toggle"
    tabindex="0"
  >
    <input
      checked=""
      class="emotion-2 emotion-3"
      id="toggle-checkbox-id"
      type="checkbox"
    />
    <label
      class="emotion-4 emotion-5"
    />
    <span>
      Toggle
    </span>
  </div>
</div>
`;

exports[`<Toggle /> component should render a toggle disabled and checked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  border-radius: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 2px;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.emotion-2+label {
  background: #F3F3F5;
  cursor: not-allowed;
}

.emotion-2:checked+label {
  background: #CCE3EB;
}

.emotion-2:checked+label::after {
  -webkit-transform: translateX(24px);
  -moz-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
}

.emotion-2~span {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  cursor: not-allowed;
  color: #A3A3A3;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  position: relative;
  width: 48px;
  height: 24px;
  border-radius: 20px;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.emotion-4::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #FFFFFF;
  -webkit-transition: -webkit-transform 0.3s ease;
  transition: transform 0.3s ease;
  margin: 2px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toggle"
    tabindex="-1"
  >
    <input
      checked=""
      class="emotion-2 emotion-3"
      disabled=""
      id="toggle-checkbox-id"
      type="checkbox"
    />
    <label
      class="emotion-4 emotion-5"
    />
    <span>
      Toggle
    </span>
  </div>
</div>
`;

exports[`<Toggle /> component should render a toggle disabled and not checked 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  border-radius: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 2px;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.emotion-2+label {
  background: #F3F3F5;
  cursor: not-allowed;
}

.emotion-2:checked+label {
  background: #CCE3EB;
}

.emotion-2:checked+label::after {
  -webkit-transform: translateX(24px);
  -moz-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
}

.emotion-2~span {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  cursor: not-allowed;
  color: #A3A3A3;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  position: relative;
  width: 48px;
  height: 24px;
  border-radius: 20px;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.emotion-4::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #FFFFFF;
  -webkit-transition: -webkit-transform 0.3s ease;
  transition: transform 0.3s ease;
  margin: 2px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toggle"
    tabindex="-1"
  >
    <input
      class="emotion-2 emotion-3"
      disabled=""
      id="toggle-checkbox-id"
      type="checkbox"
    />
    <label
      class="emotion-4 emotion-5"
    />
    <span>
      Toggle
    </span>
  </div>
</div>
`;

exports[`<Toggle /> component should render a toggle on default state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  border-radius: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-0:focus-visible {
  outline: 2px solid #000000;
  outline-offset: 2px;
}

.emotion-2 {
  opacity: 0;
  width: 0;
  height: 0;
  position: absolute;
}

.emotion-2+label {
  background: #DEDEDE;
  cursor: pointer;
}

.emotion-2:checked+label {
  background: #00677F;
}

.emotion-2:checked+label::after {
  -webkit-transform: translateX(24px);
  -moz-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
}

.emotion-2~span {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  cursor: pointer;
  color: #454545;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  position: relative;
  width: 48px;
  height: 24px;
  border-radius: 20px;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.emotion-4::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: #FFFFFF;
  -webkit-transition: -webkit-transform 0.3s ease;
  transition: transform 0.3s ease;
  margin: 2px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="toggle"
    tabindex="0"
  >
    <input
      class="emotion-2 emotion-3"
      id="toggle-checkbox-id"
      type="checkbox"
    />
    <label
      class="emotion-4 emotion-5"
    />
    <span />
  </div>
</div>
`;
